<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.efremov.advancednotebook.fragments.MainFragment"
        android:label="Notebook"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_createNoteFragment"
            app:destination="@id/createNoteFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_toSettings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_toAbout"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_toHelp"
            app:destination="@id/helpFragment" />
    </fragment>
    <fragment
        android:id="@+id/createNoteFragment"
        android:name="com.efremov.advancednotebook.fragments.CreateNoteFragment"
        android:label="@string/create_new_note_label"
        tools:layout="@layout/fragment_create_note">
        <action
            android:id="@+id/action_toSettings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_toAbout"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_toHelp"
            app:destination="@id/helpFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.efremov.advancednotebook.fragments.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_toAbout"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_toHelp"
            app:destination="@id/helpFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="com.efremov.advancednotebook.fragments.AboutAppFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about_app">
        <action
            android:id="@+id/action_toSettings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_toHelp"
            app:destination="@id/helpFragment" />
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.efremov.advancednotebook.fragments.HelpFragment"
        android:label="@string/help_service"
        tools:layout="@layout/fragment_help">
        <action
            android:id="@+id/action_toAbout"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_toSettings"
            app:destination="@id/settingsFragment" />
    </fragment>
</navigation>